--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ dist: bionic
 
 language: go
 
+env:
+  - GO111MODULE=on
+
 script:
+  - if [ ! -z `gofmt -l .` ] ; then gofmt -l . ; exit 1 ; fi
+  - go vet ./...
   - go build ./...
 
