--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,6 @@ env:
 script:
   - if [ ! -z `gofmt -l .` ] ; then gofmt -l . ; exit 1 ; fi
   - go vet ./...
+  - go generate ./...
   - go build ./...
 
